# tempura

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.claude/skills/audit/: SKILL.md
.claude/skills/hypothesis/: SKILL.md
.claude/skills/new-algorithm/: SKILL.md
.claude/skills/new-landscape/: SKILL.md
.claude/skills/new-schedule/: SKILL.md
.claude/skills/perf/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: h09_cache_layout.rs  h10_branchless.rs  throughput.rs
examples/: algotrading_showcase.rs  cyber_showcase.rs  industry_showcase.rs
src/: annealer.rs  diagnostics.rs  energy.rs  error.rs  lib.rs  math.rs  moves.rs  parallel.rs  population.rs  rng.rs  schedule.rs  state.rs
src/landscape/: barrier.rs  double_well.rs  ising.rs  mod.rs  potential_well.rs  rastrigin.rs
tests/: h01_boltzmann.rs  h02_detailed_balance.rs  h03_cooling.rs  h04_acceptance.rs  h05_parallel_tempering.rs  h06_population_annealing.rs  h07_quantum_tunneling.rs  h08_rng_quality.rs  h09_cache_layout.rs  h10_branchless_acceptance.rs  statistical.rs
