[package]
name = "tempura"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Temperature-Driven Optimization Primitives for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempura-rs/tempura"
homepage = "https://github.com/tempura-rs/tempura"
documentation = "https://docs.rs/tempura"
readme = "README.md"
keywords = ["annealing", "optimization", "simulated-annealing", "metaheuristic"]
categories = ["algorithms", "science", "simulation"]
include = [
    "src/**/*",
    "tests/**/*",
    "benches/**/*",
    "examples/**/*",
    "hypotheses/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lints.rust]
unsafe_code           = "forbid"
missing_docs          = "deny"
unused_qualifications = { level = "warn", priority = -1 }
future_incompatible   = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# Allowed pedantic lints that are too noisy for a math/science library
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
cast_precision_loss      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
missing_panics_doc       = "allow"
similar_names            = "allow"
# Hot-path performance primitives — inline(always) is intentional
inline_always            = "allow"
# 27 occurrences — too noisy for a math library
missing_const_for_fn     = "allow"
# Builder pattern — must_use_candidate already allowed
return_self_not_must_use = "allow"
# Deliberate i64 casts in landscape code
cast_possible_wrap       = "allow"
# Showcase / landscape functions are intentionally long
too_many_lines           = "allow"
# Doc formatting — affects existing doc style
doc_lazy_continuation    = "allow"

[dependencies]
# Zero runtime dependencies — all performance-critical code is self-contained.

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
statrs = "0.17"
approx = "0.5"
rand = "0.8"
rand_chacha = "0.3"
rand_pcg = "0.3"
rand_xoshiro = "0.6"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "h09_cache_layout"
harness = false

[[bench]]
name = "h10_branchless"
harness = false
